--- a/test.ipynb
+++ b/test.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import tiktoken\n",
     "from train import GPT\n",
-    "from torchinfo import summary"
+    "from torchinfo import summary\n",
+    "\n",
+    "tokenizer = tiktoken.get_encoding(\"gpt2\")"
    ]
   },
   {
@@ -288,58 +290,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "input:  torch.Size([10, 1024])\n",
-      "output:  torch.Size([10, 1024])\n",
-      "paddings:  torch.Size([10])\n",
-      "input:  torch.Size([10, 1024])\n",
-      "output:  torch.Size([10, 1024])\n",
-      "paddings:  torch.Size([10])\n",
-      "input:  torch.Size([10, 1024])\n",
-      "output:  torch.Size([10, 1024])\n",
-      "paddings:  torch.Size([10])\n",
-      "input:  torch.Size([10, 1024])\n",
-      "output:  torch.Size([10, 1024])\n",
-      "paddings:  torch.Size([10])\n",
-      "input:  torch.Size([10, 1024])\n",
-      "output:  torch.Size([10, 1024])\n",
-      "paddings:  torch.Size([10])\n",
-      "input:  torch.Size([10, 1024])\n",
-      "output:  torch.Size([10, 1024])\n",
-      "paddings:  torch.Size([10])\n",
-      "input:  torch.Size([10, 1024])\n",
-      "output:  torch.Size([10, 1024])\n",
-      "paddings:  torch.Size([10])\n",
-      "input:  torch.Size([10, 1024])\n",
-      "output:  torch.Size([10, 1024])\n",
-      "paddings:  torch.Size([10])\n",
-      "input:  torch.Size([10, 1024])\n",
-      "output:  torch.Size([10, 1024])\n",
-      "paddings:  torch.Size([10])\n",
-      "input:  torch.Size([10, 1024])\n",
-      "output:  torch.Size([10, 1024])\n",
-      "paddings:  torch.Size([10])\n",
-      "input:  torch.Size([10, 1024])\n",
-      "output:  torch.Size([10, 1024])\n",
-      "paddings:  torch.Size([10])\n",
-      "input:  torch.Size([10, 1024])\n",
-      "output:  torch.Size([10, 1024])\n",
-      "paddings:  torch.Size([10])\n",
-      "input:  torch.Size([10, 1024])\n",
-      "output:  torch.Size([10, 1024])\n",
-      "paddings:  torch.Size([10])\n",
-      "input:  torch.Size([10, 1024])\n",
-      "output:  torch.Size([10, 1024])\n",
-      "paddings:  torch.Size([10])\n",
-      "input:  torch.Size([10, 1024])\n",
-      "output:  torch.Size([10, 1024])\n",
-      "paddings:  torch.Size([10])\n"
+     "ename": "ValueError",
+     "evalue": "Unknown encoding gpt2.\nPlugins found: ['tiktoken_ext.openai_public']\ntiktoken version: 0.8.0 (are you on latest?)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DataLoader\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtiktoken\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m tokenizer \u001b[38;5;241m=\u001b[39m \u001b[43mtiktoken\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_encoding\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mgpt2\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m ds \u001b[38;5;241m=\u001b[39m TinyStoriesDataset(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/teamspace/studios/this_studio/transformers/data/TinyStoriesV2-GPT4-train.txt\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m1024\u001b[39m, tokenizer, end_story_idx\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m150\u001b[39m)\n\u001b[1;32m      7\u001b[0m dl \u001b[38;5;241m=\u001b[39m DataLoader(ds, batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m, shuffle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "File \u001b[0;32m/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/tiktoken/registry.py:79\u001b[0m, in \u001b[0;36mget_encoding\u001b[0;34m(encoding_name)\u001b[0m\n\u001b[1;32m     76\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m ENCODING_CONSTRUCTORS \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m     78\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m encoding_name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m ENCODING_CONSTRUCTORS:\n\u001b[0;32m---> 79\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m     80\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnknown encoding \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mencoding_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     81\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPlugins found: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m_available_plugin_modules()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     82\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtiktoken version: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtiktoken\u001b[38;5;241m.\u001b[39m__version__\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m (are you on latest?)\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     83\u001b[0m     )\n\u001b[1;32m     85\u001b[0m constructor \u001b[38;5;241m=\u001b[39m ENCODING_CONSTRUCTORS[encoding_name]\n\u001b[1;32m     86\u001b[0m enc \u001b[38;5;241m=\u001b[39m Encoding(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mconstructor())\n",
+      "\u001b[0;31mValueError\u001b[0m: Unknown encoding gpt2.\nPlugins found: ['tiktoken_ext.openai_public']\ntiktoken version: 0.8.0 (are you on latest?)"
      ]
     }
    ],
@@ -355,14 +318,111 @@
     "for input, target, paddings in dl:\n",
     "    print(\"input: \", input.shape)\n",
     "    print(\"output: \", target.shape)\n",
-    "    print(\"paddings: \", paddings.shape)\n"
+    "    print(\"paddings: \", paddings)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(11.0185, grad_fn=<NegBackward0>)\n",
+      "tensor(9.8197, grad_fn=<NegBackward0>)\n",
+      "tensor(9.2839, grad_fn=<NegBackward0>)\n",
+      "tensor(8.7591, grad_fn=<NegBackward0>)\n",
+      "tensor(8.6126, grad_fn=<NegBackward0>)\n",
+      "tensor(8.3583, grad_fn=<NegBackward0>)\n",
+      "tensor(8.0340, grad_fn=<NegBackward0>)\n",
+      "tensor(7.7557, grad_fn=<NegBackward0>)\n",
+      "tensor(7.6521, grad_fn=<NegBackward0>)\n",
+      "tensor(7.7188, grad_fn=<NegBackward0>)\n",
+      "tensor(7.2774, grad_fn=<NegBackward0>)\n",
+      "tensor(6.8145, grad_fn=<NegBackward0>)\n",
+      "tensor(7.1563, grad_fn=<NegBackward0>)\n",
+      "tensor(6.7100, grad_fn=<NegBackward0>)\n",
+      "tensor(6.9730, grad_fn=<NegBackward0>)\n",
+      "tensor(6.5575, grad_fn=<NegBackward0>)\n",
+      "tensor(6.3863, grad_fn=<NegBackward0>)\n",
+      "tensor(6.4802, grad_fn=<NegBackward0>)\n",
+      "tensor(6.2657, grad_fn=<NegBackward0>)\n",
+      "tensor(6.3972, grad_fn=<NegBackward0>)\n",
+      "tensor(6.2930, grad_fn=<NegBackward0>)\n",
+      "tensor(6.1038, grad_fn=<NegBackward0>)\n",
+      "tensor(5.9165, grad_fn=<NegBackward0>)\n",
+      "tensor(6.4785, grad_fn=<NegBackward0>)\n",
+      "tensor(6.3534, grad_fn=<NegBackward0>)\n",
+      "tensor(5.6277, grad_fn=<NegBackward0>)\n",
+      "tensor(6.1453, grad_fn=<NegBackward0>)\n",
+      "tensor(5.4001, grad_fn=<NegBackward0>)\n",
+      "tensor(6.1058, grad_fn=<NegBackward0>)\n",
+      "tensor(5.7584, grad_fn=<NegBackward0>)\n",
+      "tensor(5.5861, grad_fn=<NegBackward0>)\n",
+      "tensor(5.6749, grad_fn=<NegBackward0>)\n",
+      "tensor(4.8534, grad_fn=<NegBackward0>)\n",
+      "tensor(5.4714, grad_fn=<NegBackward0>)\n",
+      "tensor(5.8951, grad_fn=<NegBackward0>)\n",
+      "tensor(6.1591, grad_fn=<NegBackward0>)\n",
+      "tensor(5.5256, grad_fn=<NegBackward0>)\n",
+      "tensor(5.5441, grad_fn=<NegBackward0>)\n",
+      "tensor(5.2962, grad_fn=<NegBackward0>)\n",
+      "tensor(5.1665, grad_fn=<NegBackward0>)\n",
+      "tensor(5.2927, grad_fn=<NegBackward0>)\n",
+      "tensor(4.7173, grad_fn=<NegBackward0>)\n",
+      "tensor(5.9666, grad_fn=<NegBackward0>)\n",
+      "tensor(5.3815, grad_fn=<NegBackward0>)\n",
+      "tensor(5.1697, grad_fn=<NegBackward0>)\n",
+      "tensor(5.9792, grad_fn=<NegBackward0>)\n",
+      "tensor(5.2857, grad_fn=<NegBackward0>)\n",
+      "tensor(4.7178, grad_fn=<NegBackward0>)\n",
+      "tensor(5.3840, grad_fn=<NegBackward0>)\n",
+      "tensor(6.6815, grad_fn=<NegBackward0>)\n",
+      "tensor(5.7948, grad_fn=<NegBackward0>)\n",
+      "tensor(5.6660, grad_fn=<NegBackward0>)\n",
+      "tensor(5.6631, grad_fn=<NegBackward0>)\n",
+      "tensor(4.7224, grad_fn=<NegBackward0>)\n",
+      "tensor(5.0259, grad_fn=<NegBackward0>)\n",
+      "tensor(4.7225, grad_fn=<NegBackward0>)\n",
+      "tensor(5.7775, grad_fn=<NegBackward0>)\n",
+      "tensor(6.4575, grad_fn=<NegBackward0>)\n",
+      "tensor(5.3787, grad_fn=<NegBackward0>)\n",
+      "tensor(5.2697, grad_fn=<NegBackward0>)\n",
+      "tensor(5.4706, grad_fn=<NegBackward0>)\n",
+      "tensor(5.4382, grad_fn=<NegBackward0>)\n",
+      "tensor(5.3747, grad_fn=<NegBackward0>)\n",
+      "tensor(5.2263, grad_fn=<NegBackward0>)\n",
+      "tensor(4.8398, grad_fn=<NegBackward0>)\n",
+      "tensor(5.1194, grad_fn=<NegBackward0>)\n",
+      "tensor(5.8116, grad_fn=<NegBackward0>)\n",
+      "tensor(5.5296, grad_fn=<NegBackward0>)\n",
+      "tensor(5.4678, grad_fn=<NegBackward0>)\n",
+      "tensor(5.4262, grad_fn=<NegBackward0>)\n",
+      "tensor(5.2685, grad_fn=<NegBackward0>)\n",
+      "tensor(5.7134, grad_fn=<NegBackward0>)\n",
+      "tensor(4.6497, grad_fn=<NegBackward0>)\n",
+      "tensor(4.6915, grad_fn=<NegBackward0>)\n",
+      "tensor(4.8689, grad_fn=<NegBackward0>)\n",
+      "tensor(4.7663, grad_fn=<NegBackward0>)\n",
+      "tensor(4.5933, grad_fn=<NegBackward0>)\n",
+      "tensor(5.4763, grad_fn=<NegBackward0>)\n",
+      "tensor(5.2392, grad_fn=<NegBackward0>)\n",
+      "tensor(4.6710, grad_fn=<NegBackward0>)\n",
+      "tensor(5.4777, grad_fn=<NegBackward0>)\n",
+      "tensor(5.1275, grad_fn=<NegBackward0>)\n",
+      "tensor(4.3980, grad_fn=<NegBackward0>)\n",
+      "tensor(4.7985, grad_fn=<NegBackward0>)\n",
+      "tensor(4.6148, grad_fn=<NegBackward0>)\n",
+      "tensor(5.6407, grad_fn=<NegBackward0>)\n",
+      "tensor(4.5364, grad_fn=<NegBackward0>)\n",
+      "tensor(5.3238, grad_fn=<NegBackward0>)\n",
+      "tensor(5.5174, grad_fn=<NegBackward0>)\n",
+      "tensor(5.4339, grad_fn=<NegBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from train import train_gpt, GPT\n",
@@ -401,6 +461,13 @@
    "source": [
     "len(paddings)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
